Iphone spacing fix?

--- a/css/style.css
+++ b/css/style.css
@@ -263,6 +263,11 @@ header .main-navigation h2 {
     
     .about-me {
         background-color: inherit;
+        grid-column: span 1;
+    }
+
+    .grid-element {
+        width: 100%;
     }
 
     .project-description {
